force-app/main/default/objects/mcdm_15__DefaultPersonalizationSettings__c/mcdm_15__DefaultPersonalizationSettings__c.object-meta.xml
<CustomObject>
    <description>Stores org, campaign, and user default personalization settings.</description>
    <label>Default Personalization Settings</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Default Personalization Settings</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Personalization Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>