force-app/main/default/objects/mcdm_15__DefaultPersonalizationSettings__c/fields/mcdm_15__Greeting__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Greeting__c</fullName>
    <description>The default greeting to be used</description>
    <label>Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>