force-app/main/default/objects/mcdm_15__DefaultPersonalizationSettings__c/fields/mcdm_15__HierarchyId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__HierarchyId__c</fullName>
    <description>The Id corresponding to the hierarchy type</description>
    <label>Hierarchy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>