force-app/main/default/objects/mcdm_15__DefaultPersonalizationSettings__c/fields/mcdm_15__HierarchyType__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__HierarchyType__c</fullName>
    <description>The hierarchical level at which the setting is applicable</description>
    <label>Hierarchy Type</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>