force-app/main/default/objects/mcdm_15__DefaultPersonalizationSettings__c/fields/mcdm_15__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ObjectId__c</fullName>
    <description>The Id for the specific Object the setting is for</description>
    <label>Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>