force-app/main/default/objects/mcdm_15__DefaultPersonalizationSettings__c/fields/mcdm_15__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ObjectType__c</fullName>
    <description>The type of Object the setting is for</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>