force-app/main/default/objects/mcdm_15__DefaultPersonalizationSettings__c/fields/mcdm_15__SendFrom__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SendFrom__c</fullName>
    <description>The default from name to be used</description>
    <label>From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>