force-app/main/default/objects/mcdm_15__DefaultPersonalizationSettings__c/fields/mcdm_15__Signature__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Signature__c</fullName>
    <description>The default signature to be used</description>
    <label>Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>